# bearing-fault-spectrogram-cv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
app/: streamlit_app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  spectrogram.ts  styles.css
frontend/src/components/: AttributionCanvas.tsx  GradCamViewer.tsx  LiveReplayConsole.tsx  ModelReadoutRack.tsx  SampleSelector.tsx  SpectrogramCanvas.tsx  VariantComparison.tsx
reports/resnet18_clean_eval/: evaluation_metrics.json  summary.csv
reports/resnet18_clean_eval/analysis/: key_findings.md  robustness_summary.csv
src/: __init__.py  analyze_results.py  app_utils.py  build_dataset.py  data_loader.py  dataset.py  denoise.py  evaluate.py  gradcam.py  model.py  noise.py  segment.py  spectrogram.py  train.py
tests/: test_analyze_results.py  test_api.py  test_app_utils.py  test_build_dataset.py  test_data_loader.py  test_dataset.py  test_denoise.py  test_evaluate.py  test_gradcam.py  test_model.py  test_noise.py  test_segment.py  test_spectrogram.py  test_train.py
