[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bearing-fault-spectrogram-cv"
version = "0.1.0"
description = "Noise-robust bearing fault detection with spectrogram explanations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "matplotlib>=3.8",
    "numpy>=1.26,<3",
    "scipy>=1.12",
    "streamlit>=1.58",
    "torch>=2.2",
    "torchvision>=0.17",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "src*"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
